--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "servidor que gerencia os videos que verei no youtube conforme o tempo que tenho disponivel",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/djonata-dias/coursePlatform#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "coffee-script": "^1.12.7",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "gapi": "0.0.3",
+    "googleapis": "^67.1.0",
+    "nodemon": "^2.0.7"
   }
 }
