--- a/ecosystem.config.yml
+++ b/ecosystem.config.yml
@@ -1,7 +1,7 @@
  apps:
  - name: app
-   script: ./server.js
+   script: ./index.js
    exec_mode: cluster
    instances: max
    max_memory_restart: 500M
-   watch: true
+   watch: false
