ajuste no Procfile

--- a/ecosystem.config.yml
+++ b/ecosystem.config.yml
@@ -2,6 +2,6 @@
  - name: app
    script: ./index.js
    exec_mode: cluster
-   instances: max
-   max_memory_restart: 500M
+   instances: 2
+   max_memory_restart: 200M
    watch: false
