--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "flipout": "^1.0.0",
     "googleapis": "^67.1.0",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "nodemon": "^2.0.7",
-    "pm2": "^4.5.4"
+    "pm2": "^4.5.0"
   }
 }
